# pyworldquant

./: README.md  Untitled.ipynb  config.py  pyproject.toml  requirements.txt
alpha_generator/: 101alpha_Convert.txt  alphapool.csv
document/: database.xlsx
example/: alphatest.py  demo.py  test.py
pyworldquant/: api.py
pyworldquant/lib/: utils.py
pyworldquant/spot/: _simulate.py
src/pyworldquant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pyworldquant/spot/: __init__.py  _simulate.py
