[project]
name = 'pyworldquant'
version = '0.0.1'
classifiers = [
    'Development Status :: 1 - Planning',
    'Intended Audience :: Education',
    'License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8'
]
description = 'A python tool developed for WorldQuant Brain Platform User'
license = { file = 'LICENSE' }
readme = 'README.md'
requires-python = '>=3.6'
urls = { repository = 'https://github.com/whosquant/pyworldquant' }

dependencies = [
    'requests',
    'toml',
    'pandas',
]

[[project.authors]]
name = 'Jeremy Meng'
email = 'jeremytousnet@gmail.com'

[project.optional-dependencies]
dev = [
    'autopep8',
    'isort',
    'pre-commit',
    'setuptools',
    'twine',
    'upgrade-ensurepip',
    'wheel',
]
test = [
    'mypy',
    'pydantic',
    'pylint',
    'pytest',
    'pytest-cov',
]

[build-system]
requires = [
    'setuptools>=38.6.0',
    'requests',
    'pandas',
    'numpy',
]
